test/good/automatic/base/without_input/ret_zero/0061.lat

int main() {
  int x = 100;
  if (10 > 20 + 20/(x * 0 + x))
    return 2;
  return 0;
}
