test/bad/automatic/base/compile_time/0057.lat

int main() {
  if (10 > 20 + 3/0)
    return 2;
  return 0;
}
